fix options modal popup for restaurants on mobile

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -78,6 +78,6 @@ h3 {
 
 @media only screen and (max-width: 768px) {
   .navbar-container {
-    padding: 60px 10px;
+    padding: 100px 10px;
   }
 }
